<resources>
    <string name="app_name">TestApplicationFirebase</string>
    <string name="stident_id">Enter Student ID</string>
    <string name="student_name">Enter Student Name</string>
    <string name="student_address">Enter Student Address</string>
    <string name="student_phone">Enter Student Phone</string>
    <string name="save_button">Save</string>
    <string name="show_button">show</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
</resources>
